--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "mishka",
-  "version": "15.0.0",
+  "name": "cats",
+  "version": "1.0.0",
   "private": true,
-  "description": "Личный проект «Мишка» от HTML Academy",
+  "description": "Тестовое задание FUNBOX",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.1.x",
     "browser-sync": "2.24.x",
+    "del": "^3.0.0",
     "gulp": "4.0.x",
+    "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
+    "gulp-posthtml": "^3.0.4",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "4.0.x",
-    "@htmlacademy/editorconfig-cli": "1.x",
+    "gulp-uglify": "^3.0.1",
+    "posthtml-include": "^1.2.0",
+    "posthtml-modules": "^0.4.2",
     "stylelint": "9.6.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
